# mc_log_watcher

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  reproduce_issue.py  run.sh
src/: main.rs
