[package]
name = "mc_log_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # ← これが重要です！
dotenv = "0.15"
